--- a/MyCity4Kids/MyCity4Kids/res/layout/blogger_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blogger_profile_activity.xml
@@ -245,16 +245,19 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:text="@string/blogger_profile.top_3_article" />
+            android:text="@string/blogger_profile.top_3_article"
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/topArticleContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/topArticleLabel"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:visibility="gone">
 
             <RelativeLayout
+                android:id="@+id/topArticle_1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -268,10 +271,11 @@
                     android:src="@drawable/default_article" />
 
                 <View
+                    android:id="@+id/tranparency_1"
                     android:layout_width="94dp"
                     android:layout_height="54dp"
                     android:layout_centerInParent="true"
-                    android:background="@color/trans_gray" />
+                    android:background="@color/publish_article.tag_images.selected_bg" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/txvTopArticle_1"
@@ -288,6 +292,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/topArticle_2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -301,10 +306,11 @@
                     android:src="@drawable/default_article" />
 
                 <View
+                    android:id="@+id/tranparency_2"
                     android:layout_width="94dp"
                     android:layout_height="54dp"
                     android:layout_centerInParent="true"
-                    android:background="@color/trans_gray" />
+                    android:background="@color/publish_article.tag_images.selected_bg" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/txvTopArticle_2"
@@ -321,6 +327,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/topArticle_3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -334,10 +341,11 @@
                     android:src="@drawable/default_article" />
 
                 <View
+                    android:id="@+id/tranparency_3"
                     android:layout_width="94dp"
                     android:layout_height="54dp"
                     android:layout_centerInParent="true"
-                    android:background="@color/trans_gray" />
+                    android:background="@color/publish_article.tag_images.selected_bg" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/txvTopArticle_3"
@@ -368,7 +376,7 @@
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:layout_below="@+id/underline_0"
-            android:drawableLeft="@drawable/write_icon"
+            android:drawableLeft="@drawable/ic_article"
             android:drawablePadding="20dp"
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
@@ -391,7 +399,7 @@
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:layout_below="@+id/underline_1"
-            android:drawableLeft="@drawable/write_icon"
+            android:drawableLeft="@drawable/ic_video"
             android:drawablePadding="20dp"
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
