Setting finished + Blog Setup WIP

--- a/MyCity4Kids/MyCity4Kids/res/layout/app_settings_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/app_settings_activity.xml
@@ -52,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:background="?attr/colorPrimary"
+        android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:tabIndicatorColor="@color/home.trending.tabbar_indicator"
