--- a/MyCity4Kids/MyCity4Kids/res/layout/change_password_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/change_password_tab_fragment.xml
@@ -1,11 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="CHANGE PASSWORD" />
-</LinearLayout>
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
+
+        <com.mycity4kids.widget.CustomFontEditText
+            android:id="@+id/currentPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:backgroundTint="@color/app_settings.change_pass.edit_text_underline"
+            android:hint="@string/app_settings.change_pass.hint_current_pass"
+            android:inputType="textPassword"
+            android:textColor="@color/app_settings.change_pass.text_current_pass"
+            android:textColorHint="@color/app_settings.change_pass.hint_current_pass"
+            app:fontName="oswald.ttf" />
+
+        <com.mycity4kids.widget.CustomFontEditText
+            android:id="@+id/newPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_below="@+id/currentPasswordEditText"
+            android:backgroundTint="@color/app_settings.change_pass.edit_text_underline"
+            android:hint="@string/app_settings.change_pass.hint_new_pass"
+            android:inputType="textPassword"
+            android:textColor="@color/app_settings.change_pass.text_new_pass"
+            android:textColorHint="@color/app_settings.change_pass.hint_new_pass"
+            app:fontName="oswald.ttf" />
+
+        <com.mycity4kids.widget.CustomFontEditText
+            android:id="@+id/confirmPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_below="@+id/newPasswordEditText"
+            android:backgroundTint="@color/app_settings.change_pass.edit_text_underline"
+            android:hint="@string/app_settings.change_pass.hint_confirm_pass"
+            android:inputType="textPassword"
+            android:textColor="@color/app_settings.change_pass.text_confirm_pass"
+            android:textColorHint="@color/app_settings.change_pass.hint_confirm_pass"
+            app:fontName="oswald.ttf" />
+
+    </RelativeLayout>
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/saveTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:elevation="20dp"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="@string/app_settings.change_pass.save"
+        android:textColor="@color/app_settings.change_pass.save"
+        android:textSize="17sp"
+        app:fontName="oswald_regular.ttf" />
+</RelativeLayout>
