--- a/MyCity4Kids/MyCity4Kids/res/drawable/unfollow_topic_author_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/unfollow_topic_author_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="#9d9d9d" />
+        android:color="#507cbe" />
 
     <solid android:color="#507cbe" />
 
