--- a/MyCity4Kids/MyCity4Kids/res/layout/edit_preferences_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/edit_preferences_tab_fragment.xml
@@ -1,11 +1,298 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="EDIT PREFERENCES" />
-</LinearLayout>
+        android:layout_above="@+id/saveTextView">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/notificationLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="20dp"
+                android:text="@string/app_settings.edit_prefs.notifications"
+                android:textColor="@color/app_settings.edit_prefs.notifications"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/notificationSettingRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/notificationLabel"
+                android:nestedScrollingEnabled="false"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp" />
+
+            <View
+                android:id="@+id/underline1"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/notificationSettingRecyclerView"
+                android:background="@color/light_grey1" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/subscriptionLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/underline1"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.subscriptions"
+                android:textColor="@color/app_settings.edit_prefs.subscriptions"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/subscriptionSettingRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/subscriptionLabel"
+                android:nestedScrollingEnabled="false"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp" />
+
+            <View
+                android:id="@+id/underline2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/subscriptionSettingRecyclerView"
+                android:background="@color/light_grey1" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/addAccountLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/underline2"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.add_account"
+                android:textColor="@color/app_settings.edit_prefs.add_account"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/fbConnectLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/addAccountLabel"
+                android:layout_toLeftOf="@+id/fbConnectBtn"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.facebook"
+                android:textColor="@color/app_settings.edit_prefs.facebook"
+                android:textSize="16sp"
+                app:fontName="oswald.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/fbConnectBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/addAccountLabel"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.add"
+                android:textColor="@color/app_settings.edit_prefs.add"
+                android:textSize="16sp"
+                app:fontName="oswald.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/twitterConnectLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/fbConnectLabel"
+                android:layout_toLeftOf="@+id/twitterConnectBtn"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.twitter"
+                android:textColor="@color/app_settings.edit_prefs.twitter"
+                android:textSize="16sp"
+                app:fontName="oswald.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/twitterConnectBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/fbConnectLabel"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.add"
+                android:textColor="@color/app_settings.edit_prefs.add"
+                android:textSize="16sp"
+                app:fontName="oswald.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/gplusConnectLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/twitterConnectLabel"
+                android:layout_toLeftOf="@+id/gplusConnectBtn"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.google"
+                android:textColor="@color/app_settings.edit_prefs.google"
+                android:textSize="16sp"
+                app:fontName="oswald.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/gplusConnectBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/twitterConnectLabel"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.add"
+                android:textColor="@color/app_settings.edit_prefs.add"
+                android:textSize="16sp"
+                app:fontName="oswald.ttf" />
+
+            <View
+                android:id="@+id/underline3"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/gplusConnectBtn"
+                android:background="@color/light_grey1" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/topicInterestLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/underline3"
+                android:layout_toLeftOf="@+id/addTopicsBtn"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.topics_interested"
+                android:textColor="@color/app_settings.edit_prefs.topics_interested"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/addTopicsBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/gplusConnectBtn"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.add_topics"
+                android:textColor="@color/app_settings.edit_prefs.add_topics"
+                android:textSize="14sp"
+                app:fontName="oswald.ttf" />
+
+            <LinearLayout
+                android:id="@+id/flContainerLL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/topicInterestLabel"
+                android:animateLayoutChanges="true"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp">
+
+                <org.apmem.tools.layouts.FlowLayout
+                    android:id="@+id/flowLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:animateLayoutChanges="true">
+
+                </org.apmem.tools.layouts.FlowLayout>
+            </LinearLayout>
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/showMoreFollowedTopicsTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/flContainerLL"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.more_topics"
+                android:textColor="@color/app_settings.edit_prefs.more_topics"
+                android:textSize="16sp"
+                app:fontName="oswald.ttf" />
+
+            <View
+                android:id="@+id/underline4"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/showMoreFollowedTopicsTextView"
+                android:background="@color/light_grey1" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/preferredLangLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/underline4"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:text="@string/app_settings.edit_prefs.pref_lang"
+                android:textColor="@color/app_settings.edit_prefs.pref_lang_label"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/prefLanguagesRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/preferredLangLabel"
+                android:nestedScrollingEnabled="false"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp" />
+        </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/saveTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp"
+        android:background="#ffffff"
+        android:elevation="20dp"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="@string/app_settings.edit_profile.save"
+        android:textColor="@color/app_settings.edit_profile.save"
+        android:textSize="17sp"
+        app:fontName="oswald_regular.ttf" />
+</RelativeLayout>
