--- a/MyCity4Kids/MyCity4Kids/res/layout/notification_settings_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/notification_settings_item.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <android.support.v7.widget.SwitchCompat
         android:id="@+id/notificationStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
         android:text="notification"
+        android:textColor="@color/app_settings.edit_prefs.subs_notif_name"
+        android:textSize="16sp"
         android:theme="@style/SwitchStyle" />
 </LinearLayout>
