--- a/MyCity4Kids/MyCity4Kids/res/drawable/circular_textview.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/circular_textview.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval" >
+    android:shape="oval">
 
-    <solid android:color="#BCBCBC" />
+    <solid android:color="@color/blog_setup.profile_pic_add" />
 
     <stroke
         android:width="0dp"
-        android:color="#4a6176" />
+        android:color="@color/blog_setup.profile_pic_add" />
 
     <padding
+        android:bottom="0dp"
         android:left="0dp"
         android:right="0dp"
-        android:top="0dp"
-        android:bottom="0dp"
-        />
+        android:top="0dp" />
 
     <corners android:radius="4dp" />
 
