--- a/MyCity4Kids/MyCity4Kids/res/layout/change_city_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/change_city_listing_item.xml
@@ -3,6 +3,7 @@
     style="@android:style/Theme.Holo.Light"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical">
 
     <RadioButton
@@ -13,6 +14,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="6dp"
         android:buttonTint="@color/primary_blue"
+        android:clickable="false"
         android:paddingLeft="10dp"
         android:text="Delhi-NCR"
         android:textColor="@color/black_color"
