--- a/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
@@ -48,7 +48,6 @@
             android:layout_below="@id/txvCommentTitle"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
-            android:fontFamily="sans-serif-thin"
             android:singleLine="false"
             android:text="@string/upload_video.tutorial.description"
             android:textColor="@color/ad.comment.body"
@@ -56,7 +55,7 @@
             app:fontName="oswald_regular.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/txvReply"
+            android:id="@+id/txvCommentCellReply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/txvCommentTitle"
@@ -71,27 +70,30 @@
             app:fontName="oswald_regular.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/txvEdit"
+            android:id="@+id/txvCommentCellEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/txvCommentTitle"
+            android:layout_alignStart="@+id/txvCommentTitle"
             android:layout_below="@+id/txvCommentDescription"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:layout_toRightOf="@+id/txvReply"
             android:padding="5dp"
             android:text="@string/ad.comments.edit_label"
             android:textColor="@color/ad.comment.edit_label"
             android:textSize="@dimen/ad_comments_edit_btn"
+            android:visibility="gone"
             app:fontName="oswald_regular.ttf" />
 
         <View
             android:id="@+id/separatorView"
             android:layout_width="1dp"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/txvEdit"
-            android:layout_alignTop="@+id/txvEdit"
+            android:layout_alignBottom="@+id/txvCommentCellReply"
+            android:layout_alignTop="@+id/txvCommentCellReply"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:layout_toRightOf="@+id/txvEdit"
+            android:layout_toEndOf="@+id/txvCommentCellReply"
+            android:layout_toRightOf="@+id/txvCommentCellReply"
             android:background="@color/grey" />
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -108,65 +110,17 @@
             app:fontName="oswald_regular.ttf" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/replyRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/relativeMainContainer"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/comments_reply_bg"
+        android:orientation="vertical"
         android:visibility="visible">
 
-        <!--<ImageView-->
-        <!--android:id="@+id/replyUserImageView"-->
-        <!--android:layout_width="@dimen/ad_comments_profile_pic_width"-->
-        <!--android:layout_height="@dimen/ad_comments_profile_pic_height"-->
-        <!--android:layout_marginBottom="5dp"-->
-        <!--android:layout_marginLeft="14dp"-->
-        <!--android:layout_marginRight="5dp"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:src="@drawable/default_commentor_img" />-->
-
-        <!--<com.mycity4kids.widget.CustomFontTextView-->
-        <!--android:id="@+id/replyUserNameTextView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:layout_toRightOf="@+id/replyUserImageView"-->
-        <!--android:ellipsize="marquee"-->
-        <!--android:maxLines="1"-->
-        <!--android:maxWidth="150dp"-->
-        <!--android:text="user d wad d dijiaw dawj9iad ikad"-->
-        <!--android:textColor="@color/black_color"-->
-        <!--android:textSize="@dimen/ad_comments_reply_username" />-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/replied"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignBottom="@+id/replyUserNameTextView"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:layout_toRightOf="@+id/replyUserNameTextView"-->
-        <!--android:fontFamily="sans-serif-thin"-->
-        <!--android:paddingLeft="8dp"-->
-        <!--android:text="Replied"-->
-        <!--android:textColor="@color/black_color"-->
-        <!--android:textSize="@dimen/ad_comments_replied" />-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/replyCountTextView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:fontFamily="sans-serif-thin"-->
-        <!--android:paddingLeft="5dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--android:text="REPLIES"-->
-        <!--android:textColor="@color/black_color"-->
-        <!--android:textSize="@dimen/ad_comments_replied_count" />-->
-    </RelativeLayout>
+    </LinearLayout>
 
     <View
         android:id="@+id/dividerLine"
