--- a/MyCity4Kids/MyCity4Kids/res/layout/custom_reply_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/custom_reply_cell.xml
@@ -10,11 +10,21 @@
     android:paddingTop="8dp">
 
     <ImageView
+        android:id="@+id/replyIndicatorImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_comments_arrow" />
+
+    <ImageView
         android:id="@+id/network_img"
         android:layout_width="@dimen/ad_comments_profile_pic_width"
         android:layout_height="@dimen/ad_comments_profile_pic_width"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@+id/replyIndicatorImageView"
+        android:layout_toRightOf="@+id/replyIndicatorImageView"
         android:contentDescription="@string/author_img"
         android:src="@drawable/default_commentor_img"
         android:visibility="visible" />
@@ -24,11 +34,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@+id/network_img"
         android:layout_toRightOf="@+id/network_img"
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="false"
-        android:text="@string/login_email.forgot_password"
         android:textColor="@color/ad.comment.username"
         android:textSize="@dimen/ad_comments_username"
         app:fontName="oswald_regular.ttf" />
@@ -50,12 +61,14 @@
         app:fontName="open_sans.ttf" />
 
     <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/txvReply"
+        android:id="@+id/txvReplyCellReply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/txvCommentTitle"
         android:layout_alignStart="@+id/txvCommentTitle"
         android:layout_below="@+id/txvCommentDescription"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="5dp"
         android:padding="5dp"
         android:text="@string/ad.comments.reply_label"
@@ -65,27 +78,29 @@
         app:fontName="oswald_regular.ttf" />
 
     <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/txvEdit"
+        android:id="@+id/txvReplyCellEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/txvCommentTitle"
+        android:layout_alignStart="@+id/txvCommentTitle"
         android:layout_below="@+id/txvCommentDescription"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
-        android:layout_toRightOf="@+id/txvReply"
         android:padding="5dp"
         android:text="@string/ad.comments.edit_label"
         android:textColor="@color/ad.comment.edit_label"
         android:textSize="@dimen/ad_comments_edit_btn"
+        android:visibility="invisible"
         app:fontName="oswald_regular.ttf" />
 
     <View
         android:id="@+id/separatorView"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/txvEdit"
-        android:layout_alignTop="@+id/txvEdit"
+        android:layout_alignBottom="@+id/txvReplyCellReply"
+        android:layout_alignTop="@+id/txvReplyCellReply"
         android:layout_marginRight="10dp"
-        android:layout_toRightOf="@+id/txvEdit"
+        android:layout_toRightOf="@+id/txvReplyCellReply"
         android:background="@color/grey" />
 
     <com.mycity4kids.widget.CustomFontTextView
@@ -101,16 +116,16 @@
         android:textSize="@dimen/ad_comments_date"
         app:fontName="oswald_regular.ttf" />
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/replyRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txvReply"
+        android:layout_below="@id/txvReplyCellReply"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/comments_reply_bg"
+        android:orientation="vertical"
         android:visibility="visible">
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
