--- a/MyCity4Kids/MyCity4Kids/res/layout/edit_preferences_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/edit_preferences_tab_fragment.xml
@@ -7,8 +7,8 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/saveTextView">
+        android:layout_above="@+id/saveTextView"
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
