some more bug fixes

--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_notification.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_notification.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -51,13 +52,16 @@
             android:src="@drawable/progress_spinner" />
     </RelativeLayout>
 
-    <TextView
+    <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/noBlogsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="No Notifications"
-        android:visibility="gone" />
+        android:text="@string/notification.no_notification"
+        android:textColor="@color/empty_list_msg"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:fontName="oswald_regular.ttf" />
 
     <ProgressBar
         android:id="@+id/progressBar"
