--- a/MyCity4Kids/MyCity4Kids/res/layout/ranking_stats_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/ranking_stats_tab_fragment.xml
@@ -124,6 +124,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/pageViewsChart"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
             android:layout_toLeftOf="@+id/pageViewCountTextView"
             android:layout_toStartOf="@+id/pageViewCountTextView"
             android:background="@color/ranking.boxes_bg"
@@ -142,6 +143,7 @@
             android:layout_alignParentRight="true"
             android:layout_below="@+id/pageViewsChart"
             android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
             android:background="@color/ranking.boxes_bg"
             android:gravity="center"
             android:paddingRight="10dp"
