--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -30,7 +30,7 @@
                 android:paddingRight="10dp"
                 android:text=""
                 android:textColor="@color/ad.title"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 app:fontName="oswald_regular.ttf" />
 
             <org.apmem.tools.layouts.FlowLayout
@@ -405,12 +405,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trendingArticles"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="10dp"
                 android:paddingLeft="10dp"
                 android:text="@string/ad.comments.title"
                 android:textColor="@color/ad.comment.title"
                 android:textSize="@dimen/ad_comments_heading"
+                android:visibility="gone"
                 app:fontName="oswald_regular.ttf" />
 
             <LinearLayout
@@ -517,7 +517,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/grey" />
+                android:background="@color/light_grey1" />
 
             <LinearLayout
                 android:layout_width="match_parent"
