--- a/MyCity4Kids/MyCity4Kids/res/layout/category_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/category_activity.xml
@@ -196,17 +196,14 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:groupIndicator="@null"
-                android:scrollbars="none"></ExpandableListView>
+                android:scrollbars="none" />
 
             <ListView
                 android:id="@+id/searchList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white_color"
-                android:visibility="gone"
-
-                ></ListView>
-
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/no_result"
